<resources>
    <string name="app_name">BITSMITSTOCK APPS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="tab_text_1">All Items</string>
    <string name="tab_text_2">Sell</string>
    <string name="tab_text_3">Restock</string>
    <string name="tab_text_4">Kategori</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="beranda">Beranda</string>
    <string name="laporan_perhari">Laporan Perhari</string>
    <string name="keluar">Keluar</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="laporan_perbulan">Laporan Perbulan</string>
    <string name="bismitstock_apps">BISMITSTOCK APPS</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="rp_5000">Rp. 5000</string>
    <string name="urutkan">Urutkan</string>
    <string name="tambah">Tambah</string>
    <string name="next"><![CDATA[Next >]]></string>


    <string name="pref_name">My Pref</string>
    <string name="pref_key">My Key</string>

    <string name="slide1_title">Slide 1</string>
    <string name="slide1_des">slide 1 Des</string>

    <string name="slide2_title">Slide 2</string>
    <string name="slide2_des">slide 2 Des</string>

    <string name="slide3_title">Slide 3</string>
    <string name="slide3_des">slide 3 Des</string>
    <string name="stock_terbanyak">Stock Terbanyak</string>
    <string name="stock_tersedikit">Stock Tersedikit</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="tutup">Tutup</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="harga">Harga</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="selesai">Selesai</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="stock_barang">5</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="select_picture">Select Picture</string>
    <string name="berhasil_tambah">Barang berhasil ditambahkan</string>
    <string name="laporan_harian">Laporan Harian</string>
    <string name="tentang">Tentang</string>
</resources>
